2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	(poke-font-lock-keywords): Cover the case of chained declaration
	lines with type constructors in them.

2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-mode.el (poke-font-lock-keywords): Add additional rule
	to cover chained declarations.

2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-mode.el (poke-builtin-types): Remove "offset".
	(poke-type-constructor-integral): New face.
	(poke-type-constructor-offset): Likewise.
	(poke-declaration-name): Likewise.
	(poke-font-lock-keywords): Font-lock string literals, integral
	constructors, offset constructors and the names of declared
	entities.

2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-mode.el (poke-smie-grammar): Indent chained
	declarations for variables, types and units.

2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bmp.pk: Use chained declarations.
	* pickles/bpf.pk: Likewise.
	* pickles/btf.pk: Likewise.
	* pickles/color.pk: Likewise.
	* pickles/ctf.pk: Likewise.
	* pickles/dwarf-expr.pk: Likewise.
	* pickles/dwarf-frame.pk: Likewise.
	* pickles/dwarf-info.pk: Likewise.
	* pickles/elf.pk: Likewise.
	* pickles/rgb24.pk: Likewise.
	* pickles/time.pk (ptime): Likewise.

2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (defvar): New rule.
	(defvar_list): Likewise.
	(deftype): Likewise.
	(deftype_list): Likewise.
	(defunit): Likewise.
	(defunit_list): Likewise.
	* testsuite/poke.pkl/defunit-1.pk: Likewise.
	* testsuite/poke.pkl/deftype-1.pk: Likewise.
	* testsuite/poke.pkl/defvar-6.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Values and Variables): Mention chained variable
	declarations.
	(type): Document chained type declarations.
	(Offset Units): Likewise for unit declarations.

2020-11-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Rename tokens def{var,type,fun,unit} to
	{var,type,fun,unit}.
	* libpoke/pkl-lex.l: Likewise.