@@ -1,5 +1,10 @@
 2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* etc/poke-mode.el (poke-field-name): New face.
+	(poke-font-lock-keywords): Rule to highlight many field names.
+
+2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>
+
 	(poke-font-lock-keywords): Cover the case of chained declaration
 	lines with type constructors in them.
 
